change cover img

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-/*body {
+body {
   margin: 0;
   background-color: black;
   font-size: 100px;
   font-family: 'Barlow Condensed', sans-serif;
-}*/
+}
 
 h1 {
   font-family: 'Montserrat', sans-serif;
@@ -42,7 +42,7 @@ a:hover {
   justify-content: center;
   text-align: center;
   padding: 30px;
-  background: url("https://picsum.photos/1600/600/?image=234") no-repeat;
+  background: url("img/omaha.jpg") center;
   background-size: cover;
   height: 100vh;
 }
