--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 h1 {
   font-family: 'Montserrat', sans-serif;
-  color: orange;
+  color: white;
   font-weight: 300;
   font-size: 32px;
 }
