--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body {
   margin: 0;
-  background-color: black;
-  font-size: 100px;
   font-family: 'Barlow Condensed', sans-serif;
 }
 
@@ -35,7 +33,6 @@ a:hover {
 }
 
 #my_header {
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,6 +42,13 @@ a:hover {
   background: url("img/omaha.jpg") center;
   background-size: cover;
   height: 100vh;
+}
+.btn{
+  background-color: white;
+  padding: 10px;
+  font-weight: 600;
+  font-size: 25px;
+  border-radius: 10px;
 }
 
 .item{
